Bug 359809 - gradient tool opacity resets after changing tools
Summary: gradient tool opacity resets after changing tools
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 2.9.11
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-26 02:14 UTC by katearcher89
Modified: 2017-11-08 11:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description katearcher89 2016-02-26 02:14:37 UTC
The gradient tool resets it's opacity setting after switching between tools, i.e. if you have used gradient tool at .3 opacity and then decided to paint over with a brush a little and afterwards wanted to add some more .3 gradient you will have to set it again.

Reproducible: Always

Steps to Reproduce:
1. Pick gradient tool and set it's opacity
2. Use gradient tool
3. Switch to brush and then back to gradient tool

Actual Results:  
Opacity for the gradient tool has been changed back to 1.

Expected Results:  
Gradient tool will remember the last opacity setting that was used.

I suppose there are two different ways to approach that behaviour: add a checkbox similar to a brush's "temporarily save tweaks" or remember these setting by default without any additional  dialogue windows.

I find the second way more straightforward since it is more natural that it you changed something it won't reset by itself(photoshop tools are working this way).
Comment 1 wolthera 2016-03-03 17:22:38 UTC
The gradient tool uses the same opacity as the brush, so maybe use the '/' key to go back and forth between brushes?
Comment 2 katearcher89 2016-03-04 01:35:11 UTC
Wow! That was SUPER unintuitive. And yes, this workaround helped. But the bug/wrong behaviour still stands. How am I supposed to know that one tool uses settings for another tool and more importantly why should it do it in the first place without any options to change this behaviour?! (except for the fact that it was for some reason programmed this way long ago and no one has touch it in ages)
Comment 3 Halla Rempt 2016-03-22 15:56:37 UTC
Since we store opacity in brushes, and set the global opacity when selecting a brush, the global opacity the user has selected get changed to the one set in the brush, and I agree that that isn't intuitive. It's a similar issue to the erase mode bug Dmitry is struggling with.
Comment 4 Halla Rempt 2017-11-08 11:15:38 UTC
Git commit 259251d6b3d4ef2ebd13e4cf3ee62ff354f769be by Boudewijn Rempt.
Committed on 08/11/2017 at 11:15.
Pushed by rempt into branch 'krita/3.3'.

Implement local, per-tool opacity.

M  +11   -0    libs/ui/tool/kis_tool_paint.cc
M  +3    -0    libs/ui/tool/kis_tool_paint.h
M  +5    -0    plugins/tools/basictools/kis_tool_gradient.cc
M  +2    -2    plugins/tools/basictools/kis_tool_gradient.h

https://commits.kde.org/krita/259251d6b3d4ef2ebd13e4cf3ee62ff354f769be
Comment 5 Halla Rempt 2017-11-08 11:15:41 UTC
Git commit 6daf2cb779a487194532002dc1e5f0cb90f77ac3 by Boudewijn Rempt.
Committed on 08/11/2017 at 11:15.
Pushed by rempt into branch 'master'.

Implement local, per-tool opacity.

M  +11   -0    libs/ui/tool/kis_tool_paint.cc
M  +3    -0    libs/ui/tool/kis_tool_paint.h
M  +5    -0    plugins/tools/basictools/kis_tool_gradient.cc
M  +2    -2    plugins/tools/basictools/kis_tool_gradient.h

https://commits.kde.org/krita/6daf2cb779a487194532002dc1e5f0cb90f77ac3