Implement local, per-tool opacity.

BUG:359809