plugins/tools/basictools/kis_tool_gradient.cc
@@ -298,4 +298,9 @@ void KisToolGradient::slotSetAntiAliasThreshold(qreal value)
     m_configGroup.writeEntry("antialiasThreshold", value);
 }
 
+void KisToolGradient::setOpacity(qreal opacity)
+{
+    m_opacity = opacity;
+}
+
 
